hphp/test/zend/bad/ext/standard/tests/strings/bug39032.php
<?php

var_dump(strcspn(chr(0),"x"));
var_dump(strcspn(chr(0),""));
var_dump(strcspn(chr(0),"qweqwe"));
var_dump(strcspn(chr(1),"qweqwe"));

echo "Done\n";
?>